--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 body {
     background-color: rgb(211, 211, 247);
+    color: black; 
+    font-family:Arial, Helvetica, sans-serif;
+    margin-bottom: 100px;
 }
