--- a/style.css
+++ b/style.css
@@ -1,6 +1,60 @@
 body {
-    background-color: rgb(211, 211, 247);
-    color: black; 
-    font-family:Arial, Helvetica, sans-serif;
+    color: greenyellow;
+    background: rgb(235, 4, 4);
+    margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
+}
+
+header {
+    border-bottom: solid 2px rgb(226, 208, 16);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
+}
+
+.chamada {
+    background: rgb(125, 116, 135);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 3px solid rgb(178, 225, 178);
+}
+
+.categoria h2 {
+    color: rgb(26, 52, 86);
 }
